# mc-ping

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  models.rs
src/notify/: custom.rs  discord.rs  firebase.rs  mod.rs  slack.rs  webhook.rs
